监控基础增删查改
